--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 flask = "^2.3.2"
 flask-login = "^0.6.2"
 flask-sqlalchemy = "^3.0.3"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
