--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ python-dotenv = "^1.0.0"
 [tool.poetry.group.dev.dependencies]
 blue = "^0.9.1"
 isort = "^5.12.0"
+pytest = "^7.3.1"
+coverage = "^7.2.5"
 
 [build-system]
 requires = ["poetry-core"]
