--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,21 @@ blue = "^0.9.1"
 isort = "^5.12.0"
 pytest = "^7.3.1"
 coverage = "^7.2.5"
+taskipy = "^1.10.4"
+
+
+[tool.isort]
+profile = "black"
+line_length = 79
+
+
+[tool.taskipy.tasks]
+lint = "isort --check --diff . && blue --check --diff ."
+format = "isort . && blue ."
+pre_test = "task lint"
+test = "coverage run --source=flask_user_auth -m pytest -s -x -vv"
+post_test = "coverage html"
+
 
 [build-system]
 requires = ["poetry-core"]
