--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ flask-login = "^0.6.2"
 flask-sqlalchemy = "^3.0.3"
 python-dotenv = "^1.0.0"
 flask-wtf = "^1.1.1"
+email-validator = "^2.0.0.post2"
 
 
 [tool.poetry.group.dev.dependencies]
